--- a/labs/Lab1.ipynb
+++ b/labs/Lab1.ipynb
@@ -32,10 +32,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "caring-truck",
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -83,10 +83,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "m =  50\n",
-      "n =  50\n",
+      "m =  100\n",
+      "n =  100\n",
       "min_limit =  -250\n",
-      "max_limit =  1023\n"
+      "max_limit =  1250\n"
      ]
     }
    ],
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "cleared-anniversary",
    "metadata": {},
    "outputs": [
@@ -130,7 +130,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--- 2 ms ---\n"
+      "--- 4 ms ---\n"
      ]
     }
    ],
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "roman-silly",
    "metadata": {
     "scrolled": true
@@ -165,7 +165,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--- 2 ms ---\n"
+      "--- 6 ms ---\n"
      ]
     }
    ],
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "vital-implementation",
    "metadata": {},
    "outputs": [
@@ -198,7 +198,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--- 2 ms ---\n"
+      "--- 6 ms ---\n"
      ]
     }
    ],
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "veterinary-glory",
    "metadata": {},
    "outputs": [
@@ -233,7 +233,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--- 3 ms ---\n"
+      "--- 5 ms ---\n"
      ]
     }
    ],
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "correct-chaos",
    "metadata": {},
    "outputs": [
@@ -270,7 +270,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--- 1 ms ---\n"
+      "--- 5 ms ---\n"
      ]
     }
    ],
@@ -278,23 +278,25 @@
     "# Быстрая сортировка.\n",
     "start_time = time.time()\n",
     "\n",
-    "def quickSort(mtrx):\n",
-    "    if len(mtrx)> 1:\n",
-    "        pivot=mtrx.pop()\n",
-    "        grtr_lst, equal_lst, smlr_lst = [], [pivot], []\n",
-    "        for item in mtrx:\n",
-    "            if item == pivot:\n",
-    "                equal_lst.append(item)\n",
-    "            elif item > pivot:\n",
-    "                grtr_lst.append(item)\n",
-    "            else:\n",
-    "                smlr_lst.append(item)\n",
-    "        return (quickSort(smlr_lst) + equal_lst + quickSort(grtr_lst))\n",
-    "    else:\n",
+    "def quick_sort(mtrx):\n",
+    "    if len(mtrx) <= 1:\n",
     "        return mtrx\n",
-    "\n",
+    "    else:\n",
+    "        element = random.choice(mtrx)\n",
+    "        left = []\n",
+    "        middle = []\n",
+    "        right = []\n",
+    "        for i in range(len(mtrx)):\n",
+    "            if mtrx[i] < element:\n",
+    "                left.append(mtrx[i])\n",
+    "            elif mtrx[i] > element:\n",
+    "                right.append(mtrx[i])\n",
+    "            else:\n",
+    "                middle.append(mtrx[i])\n",
+    "        return quick_sort(left) + middle + quick_sort(right)\n",
+    "    \n",
     "sort_matrix = copy.deepcopy(matrix)\n",
-    "quickSort(sort_matrix)\n",
+    "quick_sort(sort_matrix)\n",
     "\n",
     "print(\"--- {0} ms ---\".format(round((time.time() - start_time)*1000)))\n",
     "    "
@@ -302,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "french-czech",
    "metadata": {},
    "outputs": [
@@ -310,7 +312,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--- 1 ms ---\n"
+      "--- 7 ms ---\n"
      ]
     }
    ],
@@ -318,28 +320,28 @@
     "# Турнирная сортировка.\n",
     "start_time = time.time()\n",
     "\n",
-    "def heapify(nums, size, root_ind):\n",
-    "    smallest = root_ind\n",
-    "    left_ind = 2 * root_ind + 1\n",
-    "    right_ind = 2 * root_ind + 2\n",
-    "    if left_ind < size and nums[left_ind] < nums[smallest]:\n",
+    "def heapify(mtrx, size, index):\n",
+    "    smallest = index\n",
+    "    left_ind = 2 * index + 1\n",
+    "    right_ind = 2 * index + 2\n",
+    "    if left_ind < size and mtrx[left_ind] < mtrx[smallest]:\n",
     "        smallest = left_ind\n",
-    "        if right_ind < size and nums[right_ind] < nums[smallest]:\n",
+    "        if right_ind < size and mtrx[right_ind] < mtrx[smallest]:\n",
     "            smallest = right_ind\n",
-    "        if smallest != root_ind:\n",
-    "            nums[smallest], nums[root_ind] = nums[root_ind], nums[smallest]\n",
-    "            heapify(nums, size, smallest)\n",
+    "        if smallest != index:\n",
+    "            mtrx[smallest], mtrx[index] = mtrx[index], mtrx[smallest]\n",
+    "            heapify(mtrx, size, smallest)\n",
     "            \n",
-    "def tournament_sort(nums):\n",
-    "    n = len(nums)\n",
+    "def tournament_sort(mtrx):\n",
+    "    n = len(mtrx)\n",
     "    winners = []\n",
     "    for i in range(n - 1, -1, -1):\n",
-    "        heapify(nums, n, i)\n",
+    "        heapify(mtrx, n, i)\n",
     "    while n:\n",
-    "        nums[0], nums[n - 1] = nums[n - 1], nums[0]\n",
-    "        winners.append(nums.pop())\n",
+    "        mtrx[0], mtrx[n - 1] = mtrx[n - 1], mtrx[0]\n",
+    "        winners.append(mtrx.pop())\n",
     "        n -= 1\n",
-    "        heapify(nums, n, 0)\n",
+    "        heapify(mtrx, n, 0)\n",
     "    return winners\n",
     "\n",
     "sort_matrix = copy.deepcopy(matrix)\n",
@@ -350,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "25f2d0c8",
    "metadata": {},
    "outputs": [
@@ -358,7 +360,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--- 1 ms ---\n"
+      "--- 6 ms ---\n"
      ]
     }
    ],
@@ -382,10 +384,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a5359ee3",
+   "id": "38c4a280",
    "metadata": {},
    "source": [
-    "   В результате оценки времени работы алгоритмов сортировки было установлено, что быстрее всех работают стандартная, турнирная и быстрая сортировки.  На втором месте по скорости выполнения – сортировка вставкой, сортировка обменом, сортировка выбором. Самой длительной по времени получилась сортровка Шелла."
+    "         В результате оценки времени работы алгоритмов сортировки были получены следующие результаты:\n",
+    "          1) Стандартная функция сорттировки выполняется за 6 ms, за такое же время выполняются алгоритмы \n",
+    "          сортировки вставкой и сортировки обменом.\n",
+    "          2) Алгоритмы сортировки Шелла и быстрой сортировки выполняются за 5 ms.\n",
+    "          3) Самым быстрым получился алгоритм сортировки вставкой.\n",
+    "          4) Турнирная сортировка выполнилась за 7 ms."
    ]
   }
  ],
