--- a/labs/Lab1.ipynb
+++ b/labs/Lab1.ipynb
@@ -83,8 +83,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "m =  100\n",
-      "n =  100\n",
+      "m =  1000\n",
+      "n =  1000\n",
       "min_limit =  -250\n",
       "max_limit =  1250\n"
      ]
@@ -130,7 +130,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--- 4 ms ---\n"
+      "--- 338 ms ---\n"
      ]
     }
    ],
@@ -165,7 +165,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--- 6 ms ---\n"
+      "--- 330 ms ---\n"
      ]
     }
    ],
@@ -198,7 +198,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--- 6 ms ---\n"
+      "--- 370 ms ---\n"
      ]
     }
    ],
@@ -233,7 +233,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--- 5 ms ---\n"
+      "--- 318 ms ---\n"
      ]
     }
    ],
@@ -270,7 +270,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--- 5 ms ---\n"
+      "--- 307 ms ---\n"
      ]
     }
    ],
@@ -312,7 +312,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--- 7 ms ---\n"
+      "--- 314 ms ---\n"
      ]
     }
    ],
@@ -321,28 +321,29 @@
     "start_time = time.time()\n",
     "\n",
     "def heapify(mtrx, size, index):\n",
-    "    smallest = index\n",
+    "    largest = index\n",
     "    left_ind = 2 * index + 1\n",
     "    right_ind = 2 * index + 2\n",
-    "    if left_ind < size and mtrx[left_ind] < mtrx[smallest]:\n",
-    "        smallest = left_ind\n",
-    "        if right_ind < size and mtrx[right_ind] < mtrx[smallest]:\n",
-    "            smallest = right_ind\n",
-    "        if smallest != index:\n",
-    "            mtrx[smallest], mtrx[index] = mtrx[index], mtrx[smallest]\n",
-    "            heapify(mtrx, size, smallest)\n",
+    "    \n",
+    "    if left_ind < size and mtrx[index] < mtrx[left_ind]:\n",
+    "        largest = left_ind\n",
+    "        \n",
+    "    if right_ind < size and mtrx[largest] < mtrx[right_ind]:\n",
+    "            largest = right_ind\n",
+    "    \n",
+    "    if largest != index:\n",
+    "            mtrx[index], mtrx[largest] = mtrx[largest], mtrx[index]\n",
+    "            heapify(mtrx, size, largest)\n",
     "            \n",
     "def tournament_sort(mtrx):\n",
     "    n = len(mtrx)\n",
-    "    winners = []\n",
+    "    \n",
     "    for i in range(n - 1, -1, -1):\n",
     "        heapify(mtrx, n, i)\n",
-    "    while n:\n",
-    "        mtrx[0], mtrx[n - 1] = mtrx[n - 1], mtrx[0]\n",
-    "        winners.append(mtrx.pop())\n",
-    "        n -= 1\n",
-    "        heapify(mtrx, n, 0)\n",
-    "    return winners\n",
+    "    \n",
+    "    for k in range(n - 1, 0, -1):\n",
+    "        mtrx[k], mtrx[0] = mtrx[0], mtrx[i] \n",
+    "        heapify(mtrx, i, 0)\n",
     "\n",
     "sort_matrix = copy.deepcopy(matrix)\n",
     "tournament_sort(sort_matrix)\n",
@@ -360,7 +361,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--- 6 ms ---\n"
+      "--- 299 ms ---\n"
      ]
     }
    ],
@@ -387,12 +388,17 @@
    "id": "38c4a280",
    "metadata": {},
    "source": [
-    "         В результате оценки времени работы алгоритмов сортировки были получены следующие результаты:\n",
-    "          1) Стандартная функция сорттировки выполняется за 6 ms, за такое же время выполняются алгоритмы \n",
-    "          сортировки вставкой и сортировки обменом.\n",
-    "          2) Алгоритмы сортировки Шелла и быстрой сортировки выполняются за 5 ms.\n",
-    "          3) Самым быстрым получился алгоритм сортировки вставкой.\n",
-    "          4) Турнирная сортировка выполнилась за 7 ms."
+    "         В результате оценки времени работы алгоритмов сортировки массива, состоящего из 1000 элементов, были получены следующие результаты:\n",
+    "         1) Сортировка выбором - 338 ms\n",
+    "         2) Сортировка вставкой - 330 ms\n",
+    "         3) Сортировка обменом - 370 ms\n",
+    "         4) Сортировка Шелла - 318 ms\n",
+    "         5) Быстрая сортировка - 307 ms\n",
+    "         6) Турнирная сортировка - 314 ms\n",
+    "         7) Стандартная функция сортировки - 299 ms\n",
+    "         Стандартная функция сортировки оказалась наиболее быстрой по времени; \n",
+    "         Наиболее быстрая по времни, за исключением стандартной функции, - быстрая сортировка.\n",
+    "         Наиболее длительная - сортировка обменом."
    ]
   }
  ],
