--- a/labs/Lab2.ipynb
+++ b/labs/Lab2.ipynb
@@ -118,14 +118,16 @@
     "    first = 0\n",
     "    last = len(l) - 1\n",
     "    \n",
-    "    middle = (first + last) // 2\n",
-    "    while last - first > 1:\n",
-    "        if key <= l[middle]:\n",
-    "            last = middle\n",
+    "    while (first <= last) and (index == -1):\n",
+    "        middle = (first + last)//2\n"
+    "        if l[middle] == key:\n",
+    "            index = middle\n",
     "        else:\n",
-    "            first = middle\n",
-    "        middle = (first + last) // 2\n",
-    "    return last\n",
+    "            if key < l[middle]:\n",
+    "                last = middle -1\n",
+    "            else:\n",
+    "                first = middle +1\n",
+    "    return index\n",
     "\n",
     "#добавление элемента\n",
     "def insert_el_BS(l, element):\n",
