--- a/labs/Lab2.ipynb
+++ b/labs/Lab2.ipynb
@@ -113,13 +113,13 @@
     "#Бинарный поиск\n",
     "start_time = time.time()\n",
     "\n",
-     "def BinarySearch(l, key):\n",
+    "def BinarySearch(l, key):\n",
     "    n = len(l)\n",
     "    first = 0\n",
     "    last = len(l) - 1\n",
     "    \n",
     "    while (first <= last) and (index == -1):\n",
-    "        middle = (first + last)//2\n"
+    "        middle = (first + last)//2\n",
     "        if l[middle] == key:\n",
     "            index = middle\n",
     "        else:\n",
