--- a/labs/Lab2.ipynb
+++ b/labs/Lab2.ipynb
@@ -123,7 +123,6 @@
     "            index = middle\n",
     "        else:\n",
     "            if key < l[middle]:\n",
-
     "                last = middle -1\n",
     "            else:\n",
     "                first = middle +1\n",
@@ -800,112 +799,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "09de30c9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[[0, 0, 0, 0, 1, 0, 0, 0],\n",
-       " [0, 0, 1, 0, 0, 0, 0, 0],\n",
-       " [1, 0, 0, 0, 0, 0, 0, 0],\n",
-       " [0, 0, 0, 0, 0, 1, 0, 0],\n",
+       "[[0, 1, 0, 0, 0, 0, 0, 0],\n",
+       " [0, 0, 0, 0, 0, 0, 1, 0],\n",
+       " [0, 0, 0, 0, 1, 0, 0, 0],\n",
        " [0, 0, 0, 0, 0, 0, 0, 1],\n",
-       " [0, 1, 0, 0, 0, 0, 0, 0],\n",
+       " [1, 0, 0, 0, 0, 0, 0, 0],\n",
        " [0, 0, 0, 1, 0, 0, 0, 0],\n",
-       " [0, 0, 0, 0, 0, 0, 1, 0]]"
+       " [0, 0, 0, 0, 0, 1, 0, 0],\n",
+       " [0, 0, 1, 0, 0, 0, 0, 0]]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "class ChessBoard:\n",
-    "    def __init__(self, rows):\n",
-    "        self.rows = rows\n",
-    "        self.board = [[0 for _ in range(rows)] for _ in range(rows)]\n",
-    "        self.validPositions = [[True for _ in range(rows)] for _ in range(rows)]\n",
-    "        \n",
-    "    def toDefault(self):\n",
-    "        self.board = [[0 for _ in range(self.rows)] for _ in range(self.rows)]\n",
-    "        self.validPositions = [[True for _ in range(self.rows)] for _ in range(self.rows)]\n",
-    "    \n",
-    "    def changeValid(self, row, column):\n",
-    "        def changeRow(self, row):\n",
-    "            for c in range(self.rows):\n",
-    "                self.validPositions[row][c] = False\n",
-    "        \n",
-    "        def changeColumn(self, column):\n",
-    "            for r in range(self.rows):\n",
-    "                self.validPositions[r][column] = False\n",
-    "        \n",
-    "        def changeDiag(self, row, column):\n",
-    "            def changeMainDiag(self, row, column):\n",
-    "                if row <= column:\n",
-    "                    startPosR = 0\n",
-    "                    startPosC = column - row\n",
-    "                else:\n",
-    "                    startPosR = row - column\n",
-    "                    startPosC = 0\n",
-    "                for i in range(self.rows):\n",
-    "                    try:\n",
-    "                        self.validPositions[startPosR][startPosC] = False\n",
-    "                        startPosR += 1\n",
-    "                        startPosC += 1\n",
-    "                    except IndexError:\n",
-    "                        break\n",
-    "            \n",
-    "            def changeSecondaryDiag(self, row, column):\n",
-    "                if row + column <= self.rows -1:\n",
-    "                    startPosR = 0\n",
-    "                    startPosC = column + row\n",
-    "                else:\n",
-    "                    startPosR = column - (self.rows - 1 - row)\n",
-    "                    startPosC = self.rows - 1\n",
-    "                for i in range(self.rows):\n",
-    "                    self.validPositions[startPosR][startPosC] = False\n",
-    "                    startPosR += 1\n",
-    "                    if startPosR < 0 or startPosR > self.rows - 1:\n",
-    "                        break\n",
-    "                    startPosC -= 1\n",
-    "                    if startPosC < 0 or startPosC > self.rows - 1:\n",
-    "                        break\n",
-    "            \n",
-    "            changeMainDiag(self, row, column)\n",
-    "            changeSecondaryDiag(self, row, column)\n",
-    "        \n",
-    "        \n",
-    "        changeRow(self, row)\n",
-    "        changeColumn(self, column)\n",
-    "        changeDiag(self, row, column)\n",
-    "    \n",
-    "    \n",
-    "    def placeQueens(self):\n",
-    "        queenCount = 0\n",
-    "        while True:\n",
-    "            for i in range(self.rows):\n",
-    "                jNums = list(range(self.rows))\n",
-    "                while len(jNums) > 0:\n",
-    "                    j = jNums.pop(random.randint(0, len(jNums)-1))\n",
-    "                    if self.validPositions[i][j]:\n",
-    "                        self.board[i][j] = 1\n",
-    "                        self.changeValid(i, j)\n",
-    "                        queenCount += 1\n",
-    "                        break\n",
-    "            \n",
-    "            if queenCount < self.rows:\n",
-    "                self.toDefault()\n",
-    "                queenCount = 0\n",
-    "            else:\n",
-    "                break\n",
+    "def checkField(i,j,Queens):\n",
+    "    r=i \n",
+    "    c=j\n",
+    "    for k in range(i):\n",
+    "        if j == Queens[k]:\n",
+    "            return False\n",
+    "    while i>=0 and j>=0:\n",
+    "        if Queens[i]==j:\n",
+    "            return False\n",
+    "        i-=1\n",
+    "        j-=1\n",
+    "    while r>=0 and c<=7:\n",
+    "        if Queens[r]==c:\n",
+    "            return False\n",
+    "        r-=1\n",
+    "        c+=1    \n",
+    "    return True\n",
     "\n",
-    "\n",
-    "ch = ChessBoard(8)\n",
-    "ch.placeQueens()\n",
-    "ch.board"
+    "def findQueens(Queens=[0]*8, i=0):\n",
+    "    if i == 8:\n",
+    "        arr = [[0 for i in range(8)] for j in range(8)]\n",
+    "        for i in range(8):\n",
+    "            for j in range(8):\n",
+    "                arr[i][Queens[i]] = 1\n",
+    "        return arr\n",
+    "    else:\n",
+    "        for j in range(8):\n",
+    "            if checkField(i,j,Queens):\n",
+    "                Queens[i]=j\n",
+    "                chessBoard = findQueens(Queens,i+1)\n",
+    "                if chessBoard:\n",
+    "                    return chessBoard         \n",
+    "findQueens()"
    ]
   },
   {
