--- a/labs/Lab4.ipynb
+++ b/labs/Lab4.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c8b49957",
+   "id": "e6de3ef6",
    "metadata": {},
    "source": [
     "### Реализация стека и дека"
@@ -37,8 +37,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "id": "71fd0505",
+   "execution_count": 1,
+   "id": "68ccc87e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
     "    def removeFront(self):\n",
     "        if self.isEmpty():\n",
     "            return None\n",
-    "        return self.deque.pop(0)\n"
+    "        return self.deque.pop(0)"
    ]
   },
   {
@@ -111,8 +111,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "id": "dcea146e",
+   "execution_count": 2,
+   "id": "17702ade",
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 3,
    "id": "81cab7a8",
    "metadata": {},
    "outputs": [
@@ -249,10 +249,11 @@
     "\n",
     "result = []\n",
     "\n",
-    "with open(\"txt_files_for_lab4/2.txt\", \"r\", encoding = \"utf-8\") as file:\n",
-    "    for line in file:\n",
-    "        result.append(task2(line))\n",
+    "file = open(\"txt_files_for_lab4/2.txt\", \"r\", encoding = \"utf-8\")\n",
+    "for line in file:\n",
+    "    result.append(task2(line))\n",
     "print(\" \".join(result))            \n",
+    "file.close()\n",
     "\n",
     "file_result = open('txt_files_for_lab4/2_result.txt', 'w', encoding='utf-8')\n",
     "file_result.write(\" \".join(result))\n",
@@ -274,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 4,
    "id": "9e91a9d4",
    "metadata": {},
    "outputs": [
@@ -282,32 +283,36 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "20 25 40 2 1\n"
+      "34 25 16 7 1 \n"
      ]
     }
    ],
    "source": [
-    "stems = {1 : Stack([]), 2 : Stack([]), 3 : Stack([])}\n",
-    "\n",
-    "def task3(data):\n",
-    "    stems[1] = Stack(data)\n",
-    "    solve(len(stems[1].stack), 1, 3)\n",
-    "    \n",
-    "def solve(n, i, k):\n",
-    "    if n == 1:\n",
-    "        stems[k].push(stems[i].pop())\n",
-    "    else:\n",
-    "        solve(n - 1, i, 6 - i - k)\n",
-    "        stems[k].push(stems[i].pop())\n",
-    "        solve(n - 1, 6 - i - k, k)\n",
-    "\n",
     "file = open('txt_files_for_lab4/3.txt', 'r', encoding='utf-8')\n",
-    "f = file.readline()\n",
-    "task3(f.split(\" \"))\n",
-    "file.close()\n",
     "\n",
-    "res = \" \".join(stems[3].stack)\n",
+    "A = Stack()\n",
+    "B = Stack()\n",
+    "C = Stack()\n",
+    "num: int = 0\n",
+    "for line in file:\n",
+    "    A.push(line)\n",
+    "    num += 1\n",
+    "        \n",
+    "def task3(num, A, B, C):\n",
+    "    if num == 1:\n",
+    "        B.push(A.pop())\n",
+    "        return \n",
+    "    ToH(num-1, A, C, B)\n",
+    "    B.push(A.pop())\n",
+    "    ToH(num-1, C, B, A)\n",
+    "         \n",
+    "task3(num, A, C, B)\n",
+    "\n",
+    "res = \"\"\n",
+    "while not C.empty():\n",
+    "    res += C.pop()+ \" \"\n",
     "print(res)\n",
+    "file.close()\n",
     "\n",
     "file_result = open('txt_files_for_lab4/3_result.txt', 'w', encoding='utf-8')\n",
     "file_result.write(str(res))\n",
@@ -325,8 +330,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "id": "8b0210a0",
+   "execution_count": 5,
+   "id": "5b1df60a",
    "metadata": {},
    "outputs": [
     {
@@ -373,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 6,
    "id": "36b8f400",
    "metadata": {},
    "outputs": [
@@ -421,11 +426,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 7,
    "id": "297e36c2",
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -488,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 8,
    "id": "c56fad66",
    "metadata": {},
    "outputs": [
@@ -549,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 9,
    "id": "981fbdfe",
    "metadata": {},
    "outputs": [
