--- a/labs/Lab4.ipynb
+++ b/labs/Lab4.ipynb
@@ -302,9 +302,9 @@
     "    if num == 1:\n",
     "        B.push(A.pop())\n",
     "        return \n",
-    "    ToH(num-1, A, C, B)\n",
+    "    task3(num-1, A, C, B)\n",
     "    B.push(A.pop())\n",
-    "    ToH(num-1, C, B, A)\n",
+    "    task3(num-1, C, B, A)\n",
     "         \n",
     "task3(num, A, C, B)\n",
     "\n",
